--- a/frontend-v2/resources/styles/main.scss
+++ b/frontend-v2/resources/styles/main.scss
@@ -7,7 +7,7 @@
 @import 'ranking/ranking';
 @import 'results/results';
 
-$top-bar-height: 45px;
+$top-bar-height: 3em;
 
 body {
   font-family: 'Lato';
@@ -31,7 +31,7 @@ a {
 }
 
 .top-bar {
-  padding: 0 25px;
+  padding: 0 2em;
   height: $top-bar-height;
   background: linear-gradient(120deg, $color-primary 50%, $color-secondary 90%);
   color: $color-panel-bg;
@@ -46,8 +46,8 @@ a {
   font-weight: 600;
   font-size: 170%;
   letter-spacing: -1px;
-  margin-right: 25px;
-  margin-bottom: 3px;
+  margin-right: 1.2em;
+  margin-bottom: 0.1em;
   user-select: none;
   cursor: default;
 }
@@ -56,7 +56,7 @@ h2 {
   font-family: 'Montserrat';
   font-weight: 600;
   font-size: 180%;
-  margin-bottom: 20px;
+  margin-bottom: 2em;
   text-align: center;
 }
 
@@ -70,7 +70,7 @@ h2 {
     text-align: center;
     display: inline-block;
     line-height: $top-bar-height;
-    padding: 0 18px;
+    padding: 0 1.1em;
 
     &--active {
       background-color: $color-panel-bg;
@@ -83,17 +83,17 @@ h2 {
   }
 
   i {
-    margin-right: 8px;
+    margin-right: 0.5em;
   }
 }
 
 .page {
-  padding: 20px 25px;
+  padding: 1em 1.5em;
   display: flex;
 
   &--not-found {
     @include font-medium;
-    padding-top: 300px;
+    padding-top: 2em;
     justify-content: center;
     font-size: 999%;
     color: lighten($color-text, 60%);
