Migrate from font-awesome to Material Design Icons

--- a/frontend-v2/resources/styles/_mixins.scss
+++ b/frontend-v2/resources/styles/_mixins.scss
@@ -12,8 +12,7 @@
   font-weight: 900;
 }
 
-@mixin icon($icon) {
-    @include fa-icon;
-    @extend .fa;
-    @extend .fa-#{$icon}:before;
+@mixin icon($name) {
+  font: normal normal normal 1em/1 "Material Design Icons";
+  content: mdi($name);
 }
