--- a/frontend-v2/resources/styles/main.scss
+++ b/frontend-v2/resources/styles/main.scss
@@ -1,5 +1,5 @@
 @import '~normalize-scss/sass/normalize/import-now';
-@import 'vendor/font-awesome/font-awesome';
+@import '~mdi/scss/materialdesignicons';
 @import 'fonts';
 @import 'colors';
 @import 'variables';
