--- a/frontend-v2/resources/styles/_colors.scss
+++ b/frontend-v2/resources/styles/_colors.scss
@@ -6,14 +6,14 @@ $desaturation: 20%;
   @return desaturate(color($palette, $grade, $alpha), $desaturation);
 }
 
-$color-primary: ncolor('cerulean', 30);
-$color-secondary: ncolor('yellow', 10);
-$color-secondary-shaded: ncolor('yellow', 30);
+$color-primary: ncolor('cerulean', 50);
+$color-secondary: ncolor('magenta', 50);
+$color-secondary-shaded: ncolor('magenta', 70);
 $color-bg: ncolor('neutral-white', 4);
 $color-panel-bg: ncolor('neutral-white', 1);
 $color-text: ncolor('black', 100, 0.87);
 $color-text-secondary: ncolor('black', 100, 0.54);
-$color-positive: ncolor('green', 40);
-$color-negative: ncolor('red', 40);
+$color-positive: ncolor('green', 50);
+$color-negative: ncolor('red', 50);
 
 $color-border: ncolor('black', 100, .075);
