--- a/frontend-v2/resources/styles/common/_spinner.scss
+++ b/frontend-v2/resources/styles/common/_spinner.scss
@@ -1,10 +1,10 @@
 .react-spinner {
   position: relative;
-  width: 2px;
+  width: 32px;
   height: 32px;
   top: 50%;
   left: 50%;
-  margin-top: 100px;
+  margin-top: 3em;
 }
 
 .react-spinner_bar {
@@ -14,8 +14,8 @@
   border-radius: 5px;
   background-color: $color-primary;
   position: absolute;
-  width: 20%;
-  height: 7.8%;
+  width: 25%;
+  height: 6%;
   top: -3.9%;
   left: -10%;
 }
