--- a/frontend-v2/resources/styles/results/_page-picker.scss
+++ b/frontend-v2/resources/styles/results/_page-picker.scss
@@ -1,10 +1,17 @@
 $page-button-size: 1.7em;
 
-.pagination {
+.results-page-picker {
   list-style-type: none; 
   text-align: center;
   padding: 0;
-  margin: 0 0 1.2em 0;
+  color: $color-text-secondary;
+
+  &--top {
+    margin: 0 0 1.2em 0;
+  }
+  &--bottom {
+    margin: 1.2em 0 0 0;
+  }
 
   > li {
     height: $page-button-size;
