Apply react-headroom to the top bar

--- a/frontend-v2/resources/styles/results/_page-picker.scss
+++ b/frontend-v2/resources/styles/results/_page-picker.scss
@@ -32,6 +32,7 @@ $page-button-size: 1.7em;
           background: $color-border;
           cursor: pointer;
           color: $color-primary !important;
+          transition-duration: $base-transition-duration;
         }
       }
     }
