--- a/frontend-v2/resources/styles/results/_page-picker.scss
+++ b/frontend-v2/resources/styles/results/_page-picker.scss
@@ -1,17 +1,15 @@
 $page-button-size: 1.7em;
 
 .results-page-picker {
+  margin: 0;
+  padding: 0;
   list-style-type: none; 
   text-align: center;
-  padding: 0;
   color: $color-text-secondary;
-
-  &--top {
-    margin: 0 0 1.2em 0;
-  }
-  &--bottom {
-    margin: 1.2em 0 0 0;
-  }
+  position: relative;
+  flex: 0 1 1;
+  left: 50%;
+  transform: translateX(-50%);
 
   > li {
     height: $page-button-size;
@@ -32,7 +30,6 @@ $page-button-size: 1.7em;
           background: $color-border;
           cursor: pointer;
           color: $color-primary !important;
-          transition-duration: $base-transition-duration;
         }
       }
     }
