--- a/frontend-v2/resources/styles/ranking/_datepicker.scss
+++ b/frontend-v2/resources/styles/ranking/_datepicker.scss
@@ -10,7 +10,7 @@
 }
 
 .ranking-date-picker {
-  display: flex;
+  display: inline-flex;
   font-size: 125%;
   margin: 0 auto 0.8em auto;
   align-items: center;
