--- a/frontend-v2/resources/styles/common/_spinner.scss
+++ b/frontend-v2/resources/styles/common/_spinner.scss
@@ -1,10 +1,10 @@
 .react-spinner {
-  position: relative;
-  width: 32px;
-  height: 32px;
-  top: 50%;
-  left: 50%;
-  margin-top: 3em;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 20%;
+  z-index: 1;
+  top: 3%;
 }
 
 .react-spinner_bar {
@@ -12,7 +12,7 @@
   -moz-animation: react-spinner_spin 1.2s linear infinite;
   animation: react-spinner_spin 1.2s linear infinite;
   border-radius: 5px;
-  background-color: $color-primary;
+  background-color: red;
   position: absolute;
   width: 25%;
   height: 6%;
