--- a/frontend-v2/resources/styles/results/_page-picker.scss
+++ b/frontend-v2/resources/styles/results/_page-picker.scss
@@ -4,10 +4,9 @@ $page-button-size: 1.7em;
   margin: 0;
   padding: 0;
   list-style-type: none; 
-  text-align: center;
+  display: flex;
   color: $color-text-secondary;
   position: relative;
-  flex: 0 1 1;
   left: 50%;
   transform: translateX(-50%);
 
@@ -15,6 +14,7 @@ $page-button-size: 1.7em;
     height: $page-button-size;
     width: $page-button-size;
     display: inline-block;
+    text-align: center;
 
     &.active {
       > a {
