--- a/frontend-v2/resources/styles/ranking/_ranking.scss
+++ b/frontend-v2/resources/styles/ranking/_ranking.scss
@@ -1,5 +1,17 @@
 @import 'datepicker';
 
+@keyframes animFadeInBottom {
+	from {
+		opacity: 0;
+		transform: translateY(3em);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
 .page--ranking {
   align-items: center;
   flex-direction: column;
@@ -11,6 +23,7 @@
   margin: 0 auto;
   border-collapse: collapse;
   background: $color-panel-bg;
+  animation: animFadeInBottom 0.5s ease-out both;
 
   &--full {
     width: 700px;
@@ -50,8 +63,8 @@
       text-align: right;
     }
 
-    &--wins, 
-    &--draws, 
+    &--wins,
+    &--draws,
     &--losses {
       width: 40px;
       text-align: right;
