--- a/frontend-v2/resources/styles/ranking/_ranking.scss
+++ b/frontend-v2/resources/styles/ranking/_ranking.scss
@@ -12,6 +12,22 @@
 	}
 }
 
+@keyframes animFadeInRight {
+	from {
+		opacity: 0;
+		transform: translateX(3em);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+.ranking-date-picker {
+  animation: animFadeInRight 0.5s ease-out both;
+}
+
 .page--ranking {
   align-items: center;
   flex-direction: column;
