--- a/frontend-v2/resources/styles/ranking/_date-picker.scss
+++ b/frontend-v2/resources/styles/ranking/_date-picker.scss
@@ -18,6 +18,7 @@
   @include panel-shadow;
   padding: 0.6em;
   border: 1px solid $color-border;
+  @include animation(fade-in-right);
 
   .react-numeric-input {
     display: inline-flex;
@@ -83,7 +84,7 @@
       justify-content: center;
       align-items: center;
       height: 25px;
-  
+
       i {
         font-size: 18px;
         cursor: pointer;
