--- a/frontend-v2/resources/styles/ranking/_ranking.scss
+++ b/frontend-v2/resources/styles/ranking/_ranking.scss
@@ -1,32 +1,4 @@
-@import 'datepicker';
-
-@keyframes animFadeInBottom {
-	from {
-		opacity: 0;
-		transform: translateY(3em);
-	}
-
-	to {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
-
-@keyframes animFadeInRight {
-	from {
-		opacity: 0;
-		transform: translateX(3em);
-	}
-
-	to {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
-.ranking-date-picker {
-  animation: animFadeInRight 0.5s ease-out both;
-}
+@import 'date-picker';
 
 .page--ranking {
   align-items: center;
@@ -39,7 +11,7 @@
   margin: 0 auto;
   border-collapse: collapse;
   background: $color-panel-bg;
-  animation: animFadeInBottom 0.5s ease-out both;
+  @include animation(fade-in-bottom);
 
   &--full {
     width: 700px;
