--- a/frontend-v2/resources/styles/main.scss
+++ b/frontend-v2/resources/styles/main.scss
@@ -8,7 +8,6 @@
 @import 'mixins';
 @import 'variables';
 
-@import 'app/global';
-@import 'app/top-bar';
+@import 'app/app';
 @import 'ranking/ranking';
 @import 'results/results';
