--- a/frontend-v2/resources/styles/results/_results.scss
+++ b/frontend-v2/resources/styles/results/_results.scss
@@ -1,6 +1,6 @@
 @import 'page-picker';
 
-.page--results {
+.view--results {
   display: flex;
   justify-content: center;
   flex-direction: column;
