--- a/frontend-v2/resources/styles/_animations.scss
+++ b/frontend-v2/resources/styles/_animations.scss
@@ -1,3 +1,13 @@
+@keyframes animation-fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+	}
+}
+
 @keyframes animation-fade-in-bottom {
   from {
     opacity: 0;
