Add team and year filtering to Results page

--- a/frontend-v2/resources/styles/results/_results.scss
+++ b/frontend-v2/resources/styles/results/_results.scss
@@ -47,6 +47,14 @@
   }
 }
 
+.results-year-filter {
+  position: absolute;
+
+  input {
+    width: 4em;
+  }
+}
+
 .result {
   display: flex;
   flex-direction: column;
