--- a/frontend-v2/resources/styles/app/_global.scss
+++ b/frontend-v2/resources/styles/app/_global.scss
@@ -31,3 +31,7 @@ a {
   vertical-align: -3px;
   border: 1px solid rgba($color-text, 0.1);
 }
+
+input:focus, select:focus {
+  @include focus-outline;
+}
