--- a/frontend-v2/res/styles/_mixins.scss
+++ b/frontend-v2/res/styles/_mixins.scss
@@ -27,3 +27,7 @@
 @mixin focus-outline {
   outline: 2px solid $color-primary;
 }
+
+@mixin error-outline {
+  outline: 2px solid $color-negative;
+}
