--- a/frontend-v2/res/styles/results/_results.scss
+++ b/frontend-v2/res/styles/results/_results.scss
@@ -64,7 +64,7 @@
   @include animation(fade-in-bottom);
 
   &:hover {
-    background: $color-bg;
+    background: rgba($color-primary, 0.075);
   }
 
   &:not(:last-child) {
