--- a/frontend-v2/res/styles/results/_results.scss
+++ b/frontend-v2/res/styles/results/_results.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
 }
 
-.result-list {
+.result-list-panel {
   @include panel-shadow;
   padding: 1em;
   background: $color-panel-bg;
