Add team form to team view

--- a/frontend-v2/res/styles/_colors.scss
+++ b/frontend-v2/res/styles/_colors.scss
@@ -14,6 +14,7 @@ $color-panel-bg: ncolor('neutral-white', 1);
 $color-text: ncolor('black', 100, 0.87);
 $color-text-secondary: ncolor('black', 100, 0.54);
 $color-positive: ncolor('green', 50);
+$color-neutral: ncolor('gray', 60);
 $color-negative: ncolor('red', 50);
 
 $color-border: ncolor('black', 100, .075);
